--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 html {
   scroll-snap-type: y mandatory;
-  scroll-snap-stop: smooth;
+  scroll-snap-stop: always;
   background: rgba(0, 0, 0, 0.756);
 }
 
 .main {
-  background-image: url(hTattoo.jpeg);
+  background-image: url(blwhht.JPEG);
   background-size: cover;
   background-repeat: no-repeat;
   margin: 0;
@@ -15,6 +15,7 @@ html {
 
 .img-h1 {
   background-image: url(mobileLanding.jpeg);
+  /*background-image: url(blwhht.JPEG);*/
   background-size: cover;
   -webkit-background-clip: text;
   font-size: 4em;
@@ -22,7 +23,7 @@ html {
 }
 
 .img {
-  background: #9494946e;
+  background: rgb(136, 136, 136);
   background-size: cover;
   background-repeat: no-repeat;
   margin: 0;
@@ -40,7 +41,7 @@ html {
 }
 
 .content {
-  height: 90vh;
+  min-height: 85vh;
   text-align: center;
   align-items: center;
   justify-content: center;
@@ -51,45 +52,44 @@ html {
   margin-bottom: 20px;
   padding: 8px 20px;
   border-radius: 10px;
-  background: none;
-  color: white;
+  background: white;
+  color: black;
   font-size: 20px;
   cursor: pointer;
 }
 .main-button:hover {
-  background-color: white;
-  color: black;
+  border-color: black;
+  background-color: black;
+  color: white;
 }
 
 .hola {
   background-color: rgba(0, 0, 0, 0.404);
 }
 
-@media (max-width: 768px) {
-  .main {
-    background-image: url(mobileLanding.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    margin: 0;
-    height: 100vh;
-  }
+@media (min-width: 768px) {
+ 
 }
 
 @media (min-width: 768px) {
-  .img-h1 {
-   
-    -webkit-background-clip: text;
+  .img-h1 {   
     font-size: 6em;
-    color: transparent;
   }
 }
 
 @media (min-width: 1000px) {
   .img-h1 {
    
-    -webkit-background-clip: text;
     font-size: 10em;
-    color: transparent;
+
+  }
+
+  .main {
+    background-image: url(scn.JPEG);
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: 0;
+    height: 100vh;
   }
 }
 
