--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ html {
   background-repeat: no-repeat;
   margin: 0;
   height: 100vh;
-  scroll-snap-align: center;
+  scroll-snap-align: start;
 }
 
 .img-h1 {
