--- a/styles.css
+++ b/styles.css
@@ -40,33 +40,22 @@ html {
 }*/
 
 .img-h1 {
-  background: linear-gradient(90deg, rgba(255,0,0,1) 36%, rgba(255,249,0,1) 96%);
+  background: linear-gradient(90deg, rgb(208, 4, 4) 36%, rgb(255, 208, 0) 96%);
   background-size: 100% auto;
   -webkit-background-clip: text;
   background-clip: none;
   -webkit-text-fill-color: transparent;
-  font-size: 4em;
+  font-size: 3em;
   animation-duration: 1s;
   animation-name: slidein;
 }
 
-@keyframes slidein {
-  from {
-    margin-right: 100%;
-    width: 300%;
-  }
 
-  to {
-    margin-right: 0%;
-    width: 100%;
-  }
-}
 
 .img {
   background: rgb(0, 0, 0);
   background-size: cover;
   width: 100%;
-  margin: 0;
   height: 100vh;
   scroll-snap-align: start;
   overflow-x: scroll;
@@ -89,10 +78,12 @@ html {
 .img div{
   width: 100%;
   height: auto;
+  margin: 0;
 }
 
 
 .img div img{
+  
   left: 0;
   overflow: scroll;
   width: 100%;
@@ -100,6 +91,12 @@ html {
   height: 100vh;
   margin :0;
   scroll-snap-align: start;
+}
+.img div video{
+  width: 100%;
+  height: 100vh;
+  margin :0;
+  scroll-snap-align: center;
 }
 
 .slider {
