--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ html {
 }
 
 .main {
-  background-image: url(blwhht.JPEG);
+  background-image: url(blwhht.png);
   background-size: cover;
   background-repeat: no-repeat;
   margin: 0;
