--- a/styles.css
+++ b/styles.css
@@ -171,7 +171,7 @@ html {
   }
 
   .main {
-    background-image: url(scn.JPEG);
+    background-image: url(scn.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     margin: 0;
