--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ html {
 
 
 .img {
-  background: rgb(0, 0, 0);
+  background: rgb(255, 255, 255);
   background-size: cover;
   width: 100%;
   height: 100vh;
@@ -83,7 +83,6 @@ html {
 
 
 .img div img{
-  
   left: 0;
   overflow: scroll;
   width: 100%;
@@ -93,8 +92,9 @@ html {
   scroll-snap-align: start;
 }
 .img div video{
+  border-radius: 10vh;
   width: 100%;
-  height: 60vh;
+  height: 100vh;
   margin :0;
   scroll-snap-align: center;
 }
@@ -171,7 +171,7 @@ html {
   }
 
   .main {
-    background-image: url(scn.jpg);
+    background-image: url(scn.JPEG);
     background-size: cover;
     background-repeat: no-repeat;
     margin: 0;
