--- a/styles.css
+++ b/styles.css
@@ -175,14 +175,10 @@ video::-webkit-media-controls {
     height: 100vh;
   }
 
-  .img div{
-    width: 100%;
-    height: 100vh;
-    margin: 0;
-  }
   
   
-  .img img{
+  
+  .img div img{
     left: 0;
     overflow: scroll;
     width: 100%;
@@ -191,7 +187,7 @@ video::-webkit-media-controls {
     margin :0;
     scroll-snap-align: center;
   }
-  .img video{
+  .img div video{
     overflow: scroll;
     width: 100vh;
     height: 100vh;
