--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-html {
+tml {
   font-family: 'Times New Roman medium', Times, serif;
   background: rgba(0, 0, 0, 0.756);
   scroll-snap-type: y mandatory;
@@ -49,10 +49,9 @@ html {
 
 .img {
   background: rgb(255, 255, 255);
-  background-size: cover;
   width: 100%;
   height: 100vh;
-  scroll-snap-align: start;
+  scroll-snap-align: center;
   overflow-x: scroll;
   overflow-y: hidden;
   scroll-snap-type: x mandatory;
@@ -70,25 +69,22 @@ html {
   margin: 0;
 
 }
-.img div{
-  width: 100%;
-  height: auto;
-  margin: 0;
-}
+
 
 .img img{
-  width: 50vh;
   height: 100vh;
-  object-fit: cover;
+  object-fit: contain;
+  position: sticky;
+  background-size: cover;
   margin :0;
   scroll-snap-stop: always;
-  scroll-snap-align: start;
+  scroll-snap-align: center;
 }
 .img video{
   height: 100vh;
   margin :0;
   scroll-snap-stop: always;
-  scroll-snap-align: start;
+  scroll-snap-align: center;
 }
 video::-webkit-media-controls {
   display: none;
@@ -174,25 +170,26 @@ video::-webkit-media-controls {
     margin: 0;
     height: 100vh;
   }
-
+  .img{
+    
+  }
   
   
-  
-  .img div img{
-    left: 0;
-    overflow: scroll;
-    width: 100%;
+  .img img{
+    width: 95vh;
+    height: 100vh;
     object-fit: cover;
-    height: 100vh;
     margin :0;
-    scroll-snap-align: center;
+    scroll-snap-stop: always;
+    scroll-snap-align: start;
   }
-  .img div video{
-    overflow: scroll;
-    width: 100vh;
-    height: 100vh;
-    margin :0;
-    scroll-snap-align: center;
-  }
-}
 
+  .img video{
+    width: 95vh;
+    height: 100vh;
+    margin :0;
+    scroll-snap-stop: always;
+    scroll-snap-align: start;
+  }
+  
+}
