--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-tml {
+html {
   font-family: 'Times New Roman medium', Times, serif;
   background: rgba(0, 0, 0, 0.756);
   scroll-snap-type: y mandatory;
