--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ html {
   background: rgb(255, 255, 255);
   width: 100%;
   height: 100vh;
-  scroll-snap-align: center;
+  scroll-snap-align: start;
   overflow-x: scroll;
   overflow-y: hidden;
   scroll-snap-type: x mandatory;
