--- a/styles.css
+++ b/styles.css
@@ -57,16 +57,28 @@ html {
   
   
   
-  .img {
-    background: rgb(0, 0, 0);
-    width: 100%;
-    height: 100vh;
-    scroll-snap-align: start; 
-    overflow-x: scroll;
-    overflow-y: hidden;
-    scroll-snap-type: x mandatory;
-    scroll-snap-stop: always;
-  }
+  .img{
+      display: flex;
+      scroll-snap-align: start; 
+      overflow-x:auto;
+      scroll-snap-type: none;
+      scroll-snap-stop: always;
+    }
+
+    .img img{
+      width: 0px;
+      flex-grow: 1;
+      object-fit: cover;
+      opacity: .8;
+      transition: .5s ease;
+    }
+
+    .img img:hover{
+      cursor: crosshair;
+      width: 500px;
+      opacity: 1;
+      filter: contrast(120%);
+    }
   
   .video-container{
     height: 100vh;
@@ -80,12 +92,7 @@ html {
   }
   
   
-  .img img{
-    height: 100vh;
-    object-fit: cover;
-    scroll-snap-stop: always;
-    scroll-snap-align: start;
-  }
+  
 
   .video-slice{
     width: 100%;
