--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ html {
   background: rgb(0, 0, 0);
   width: 100%;
   height: 100vh;
-  scroll-snap-align: start;
+  scroll-snap-align: center;
   overflow-x: scroll;
   overflow-y: hidden;
   scroll-snap-type: x mandatory;
@@ -90,6 +90,7 @@ html {
 
 
 .img img{
+  with: auto;
   height: 100vh;
   object-fit: cover;
   scroll-snap-stop: always;
