--- a/styles.css
+++ b/styles.css
@@ -156,7 +156,9 @@ video::-webkit-media-controls {
   background-color: white;
   color: black;
 }
-
+a:link{
+  text-decoration: none;
+}  
 .hola {
   background-color: rgba(0, 0, 0, 0.404);
 }
