--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ a {
   background-color: #212121;
   width: 100%;
   height: 100vh;
-  scroll-snap-align: center;
+  scroll-snap-align: start;
   overflow-x: scroll;
   overflow-y: hidden;
   scroll-snap-type: x mandatory;
@@ -94,7 +94,7 @@ a {
   height: 100vh;
   object-fit: cover;
   scroll-snap-stop: always;
-  scroll-snap-align: center;
+  scroll-snap-align: start;
 }
 .img video{
   height: 100vh;
@@ -236,11 +236,6 @@ a:link{
   overflow-y: hidden;
   scroll-snap-stop: always;
 }
-
-footer{
-  background-color: #212121;
-}
-
 
 
 @media (min-width: 768px) {
