--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ a {
   background-color: #212121;
   width: 100%;
   height: 100vh;
-  scroll-snap-align: start;
+  scroll-snap-align: center;
   overflow-x: scroll;
   overflow-y: hidden;
   scroll-snap-type: x mandatory;
